--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "home-page",
+  "name": "micro-frontend-react-pages",
   "version": "0.0.1",
   "generatorVersion": "3.0.1",
-  "description": "Microfrontend workshop - Home page component",
+  "description": "Microfrontend workshop - A collection of Page components",
   "main": "dist/client.js",
   "scripts": {
     "check-updates": "ncu -u",
