--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/client.js",
   "scripts": {
     "check-updates": "ncu -u",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md",
     "prepublish": "npm run build:library",
     "demo:deploy": "npm run build:page -- --no-sourceMap && gh-pages -d dist",
     "serve:dist": "npm run build:page && http-server dist",
@@ -34,6 +35,7 @@
     "babel-preset-react-app": "^3.1.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "changelog-verify": "^1.1.0",
     "css-modules-require-hook": "^4.2.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -48,7 +50,8 @@
     "poi-preset-storybook": "^0.1.2",
     "sass-loader": "^6.0.6",
     "storybook-addon-jsx": "^5.1.0",
-    "storybook-react": "^3.2.16"
+    "storybook-react": "^3.2.16",
+    "version-changelog": "^2.1.0"
   },
   "dependencies": {
     "generator-poi-boilerplate-demo": "^1.2.1",
